--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,35 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>SiddhantSoftware</title>
+  </head>
+
+  <body
+    ><div
+      class="bg-gradient-to-tr fixed top-0 left-0 h-screen backdrop-blur-sm from-purple-500 to-red-400 w-full mx-auto"
+    >
+    </div>
+    <div class="flex h-screen place-items-center relative justify-center">
+      <div class="text-white flex flex-col items-center uppercase font-bold">
+        <div class="text-8xl tracking-[1rem]">SIDDHANT</div>
+        <div class="text-6xl text-center tracking-[0.8rem]">SOFTWARE</div>
+        <div class="mt-5 tracking-wide opacity-70">2023</div>
+      </div>
+      <div class="absolute animate-bounce bottom-10 text-white text-3xl">
+        scroll to read more
+      </div>
+    </div>
+    <div class="h-screen">hi</div>
+  </body>
+  <style is:global>
+    * {
+      font-family: Futura;
+      src: url("../../public/fonts/futura/futur.ttf");
+    }
+  </style>
 </html>
